# src/aggregates/ClientContactNumber/types/ClientContactNumberInterface.ts
@@ -1,5 +1,6 @@
 export interface ClientContactNumberInterface {
   _id: string;
+  client_id: string;
   type_id: string;
-  number: string;
+  contact_number: string;
 }
