# src/aggregates/ClientContactNumber/types/CommandDataTypes/AddClientContactNumberCommandDataInterface.ts
@@ -1,5 +1,6 @@
 export interface AddClientContactNumberCommandDataInterface {
   _id: string;
+  client_id: string;
   type_id: string;
-  number: string;
+  contact_number: string;
 }
