# src/aggregates/ContactNumberSetting/types/CommandDataTypes/AddContactNumberCommandDataInterface.ts
@@ -1,0 +1,4 @@
+export interface AddContactNumberCommandDataInterface {
+  _id: string;
+  contact_number: string;
+}
